[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/planets/tilemaps/goldilocks_surface.tres" type="TileSet" id=1]
[ext_resource path="res://planet_maps/PlanetMap.gd" type="Script" id=2]
[ext_resource path="res://planet_maps/PlanetMapController.gd" type="Script" id=3]

[node name="PlanetMaps" type="Node2D"]
script = ExtResource( 3 )

[node name="BackgroundUI" type="Control" parent="."]
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BackgroundUI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 984.0
offset_bottom = 552.0
color = Color( 0, 0, 0, 0.858824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetMap" type="Node2D" parent="."]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 2 )

[node name="MapLayer1" type="TileMap" parent="PlanetMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="MapLayer2" type="TileMap" parent="PlanetMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="MapLayer3" type="TileMap" parent="PlanetMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="MapLayer4" type="TileMap" parent="PlanetMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="MapLayer5" type="TileMap" parent="PlanetMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="MapLayer6" type="TileMap" parent="PlanetMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="MapLayer7" type="TileMap" parent="PlanetMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="MapLayer8" type="TileMap" parent="PlanetMap"]
self_modulate = Color( 1, 1, 1, 0.129412 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="MapLayer9" type="TileMap" parent="PlanetMap"]
self_modulate = Color( 0.678431, 0.678431, 0.678431, 0.223529 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="GeneratorUI" type="Control" parent="."]
visible = false
offset_left = 512.0
offset_top = 64.0
offset_right = 552.0
offset_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneratorButtonList" type="VBoxContainer" parent="GeneratorUI"]
offset_right = 128.0
offset_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gas" type="Button" parent="GeneratorUI/GeneratorButtonList"]
offset_right = 128.0
offset_bottom = 20.0
text = "Gas"

[node name="Ice" type="Button" parent="GeneratorUI/GeneratorButtonList"]
offset_top = 24.0
offset_right = 128.0
offset_bottom = 44.0
text = "Icy"

[node name="Lava" type="Button" parent="GeneratorUI/GeneratorButtonList"]
offset_top = 48.0
offset_right = 128.0
offset_bottom = 68.0
text = "Lava"

[node name="Goldilocks" type="Button" parent="GeneratorUI/GeneratorButtonList"]
offset_top = 72.0
offset_right = 128.0
offset_bottom = 92.0
text = "Goldilocks"

[node name="Desert" type="Button" parent="GeneratorUI/GeneratorButtonList"]
offset_top = 96.0
offset_right = 128.0
offset_bottom = 116.0
text = "Desert"

[node name="Ocean" type="Button" parent="GeneratorUI/GeneratorButtonList"]
offset_top = 120.0
offset_right = 128.0
offset_bottom = 140.0
text = "Ocean"

[node name="Asteroid Belt" type="Button" parent="GeneratorUI/GeneratorButtonList"]
offset_top = 144.0
offset_right = 128.0
offset_bottom = 164.0
text = "Asteroid Belt"

[node name="Comet" type="Button" parent="GeneratorUI/GeneratorButtonList"]
offset_top = 168.0
offset_right = 128.0
offset_bottom = 188.0
text = "Comet"

[node name="Outpost" type="Button" parent="GeneratorUI/GeneratorButtonList"]
offset_top = 192.0
offset_right = 128.0
offset_bottom = 212.0
text = "Outpost"
[connection signal="pressed" from="GeneratorUI/GeneratorButtonList/Gas" to="." method="_on_generate_button_pressed" binds= [ "Gas" ]]
[connection signal="pressed" from="GeneratorUI/GeneratorButtonList/Ice" to="." method="_on_generate_button_pressed" binds= [ "Ice" ]]
[connection signal="pressed" from="GeneratorUI/GeneratorButtonList/Lava" to="." method="_on_generate_button_pressed" binds= [ "Lava" ]]
[connection signal="pressed" from="GeneratorUI/GeneratorButtonList/Goldilocks" to="." method="_on_generate_button_pressed" binds= [ "Goldilocks" ]]
[connection signal="pressed" from="GeneratorUI/GeneratorButtonList/Desert" to="." method="_on_generate_button_pressed" binds= [ "Desert" ]]
[connection signal="pressed" from="GeneratorUI/GeneratorButtonList/Ocean" to="." method="_on_generate_button_pressed" binds= [ "Ocean" ]]
[connection signal="pressed" from="GeneratorUI/GeneratorButtonList/Asteroid Belt" to="." method="_on_generate_button_pressed" binds= [ "Asteroid Belt" ]]
[connection signal="pressed" from="GeneratorUI/GeneratorButtonList/Comet" to="." method="_on_generate_button_pressed" binds= [ "Comet" ]]
[connection signal="pressed" from="GeneratorUI/GeneratorButtonList/Outpost" to="." method="_on_generate_button_pressed" binds= [ "Outpost" ]]
