[gd_scene load_steps=24 format=2]

[ext_resource path="res://planet_maps/HeightMap.gd" type="Script" id=1]
[ext_resource path="res://sprites/smokeparticle.png" type="Texture" id=2]
[ext_resource path="res://planet_maps/OutpostDialog.gd" type="Script" id=3]
[ext_resource path="res://planet_maps/gas_planet_surface_gradient.tres" type="Gradient" id=4]
[ext_resource path="res://planet_maps/PlanetMapController.gd" type="Script" id=5]
[ext_resource path="res://planet_maps/PointsOfInterest.gd" type="Script" id=6]
[ext_resource path="res://planet_maps/PlanetDialog.gd" type="Script" id=7]
[ext_resource path="res://sprites/grid_square.png" type="Texture" id=8]
[ext_resource path="res://scenes/PlayerStats.tscn" type="PackedScene" id=9]
[ext_resource path="res://planet_maps/AnomalyDialog.gd" type="Script" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

// Our gradient texture.
uniform sampler2D colormap : hint_black;

uniform vec2 noise_minmax = vec2(0.0, 1.0);

void fragment() {
	// Using `noise_minmax`, we normalize our `noise` variable's range.
	float noise = (texture(TEXTURE, UV).r - noise_minmax.x) / (noise_minmax.y - noise_minmax.x);
	vec2 uv_noise = vec2(noise, 0);
	COLOR = texture(colormap, uv_noise);
}"

[sub_resource type="GradientTexture" id=2]
gradient = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 1 )
shader_param/noise_minmax = Vector2( 0, 1 )
shader_param/colormap = SubResource( 2 )

[sub_resource type="OpenSimplexNoise" id=4]
octaves = 9
period = 128.0

[sub_resource type="NoiseTexture" id=5]
width = 1024
height = 600
noise = SubResource( 4 )

[sub_resource type="GradientTexture" id=6]
gradient = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 29
outline_size = 1
outline_color = Color( 0, 0, 0, 0.403922 )
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0, 0, 0, 0.423529 )
font_data = SubResource( 9 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.00552486, 0.370166, 0.690608, 1 )
colors = PoolColorArray( 1, 1, 1, 0.091954, 1, 1, 1, 0, 2, 2, 2, 1, 1.90196, 1.90196, 1.90196, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 400, 300, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.0
angular_velocity_random = 1.0
orbit_velocity = 0.01
orbit_velocity_random = 0.0
angle = 15.9
angle_random = 1.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 12 )

[node name="PlanetSurface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="PointsOfInterest" type="Node2D" parent="."]
z_index = 2
script = ExtResource( 6 )

[node name="PlanetSurfaceMap" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PlanetMap" type="TextureRect" parent="PlanetSurfaceMap"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 5 )
stretch_mode = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}
PointsOfInterest_path = NodePath("../../PointsOfInterest")
colormap = SubResource( 6 )

[node name="Grid" type="TextureRect" parent="PlanetSurfaceMap"]
self_modulate = Color( 1, 1, 1, 0.121569 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -80.0
mouse_filter = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="PlayerStats" parent="PlanetSurfaceMap" instance=ExtResource( 9 )]

[node name="PlanetName" type="Label" parent="PlanetSurfaceMap"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -182.0
margin_top = 56.0
margin_right = -63.0
margin_bottom = 93.0
grow_horizontal = 0
custom_fonts/font = SubResource( 8 )
text = "PLANET"
align = 2
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetInformation" type="Label" parent="PlanetSurfaceMap"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -208.0
margin_top = 96.0
margin_right = -63.0
margin_bottom = 224.0
grow_horizontal = 0
custom_fonts/font = SubResource( 10 )
text = "Type: Gas
Size: Huge
Orbital Debris: Yes"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="PlanetSurfaceMap"]
visible = false
self_modulate = Color( 1, 1, 1, 0.2 )
position = Vector2( 512, 320 )
amount = 10
lifetime = 20.0
preprocess = 10.0
process_material = SubResource( 13 )
texture = ExtResource( 2 )

[node name="OutpostDialog" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PlanetDialog" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="AnomalyDialog" type="Node2D" parent="."]
script = ExtResource( 10 )
